SUBDIRS =									\
				src								\
				src/example				\
				$(NULL)

EXTRA_DIST = 							\
				Makefile.dist			\
				configure.ac 			\
				$(NULL)

CLEANFILES = *~

MAINTAINERCLEANFILES = 		\
				aclocal.m4 				\
				compile						\
				configure 				\
        install-sh				\
				Makefile.in				\
			  missing						\
				stamp-h.in 				\
				config.cache 			\
				config.h					\
				config.h.in 			\
				depcomp 					\
        ylwrap						\
				$(NULL)
